[package]
name = "simulatedworld"
version = "0.1.0"
edition = "2021"
authors = ["dliang <humgal@outlook.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bundle", "cargo"]
repository = "https://github.com/SimulatedWorld/SimulatedWorld.git"
description = "distributed app for simulated earth"

[package.metadata.bundle]
name = "simulatedworld"
identifier = "simulated.world"
icon = [
    "icons/icon_32x32.png",
    "icons/icon_128x128.png",
    "icons/icon_128x128@2x.png",
    "icons/icon_256x256.png",
]
version = "0.1.0"
resources = ["assets", "icons/**/*.png"]
category = "game"
short_description = "distributed app for simulated earth"

[workspace]
members = [
    "crates/atmo",
    "crates/cave",
    "crates/cli",
    "crates/clouds",
    "crates/core",
    "crates/creature",
    "crates/dag",
    "crates/data",
    "crates/equation",
    "crates/geo",
    "crates/geodynamics",
    "crates/geophysical",
    "crates/glacier",
    "crates/gravity",
    "crates/horizon",
    "crates/lava",
    "crates/log",
    "crates/map",
    "crates/math",
    "crates/mesh",
    "crates/metrics",
    "crates/ml",
    "crates/model",
    "crates/net",
    "crates/node",
    "crates/ocean",
    "crates/parallel",
    "crates/plant",
    "crates/render",
    "crates/starry",
    "crates/stroage",
    "crates/sun",
    "crates/tasks",
    "crates/terrain",
    "crates/tools",
    "crates/user",
    "crates/vm",
    "crates/wallet",
    "crates/water",
    "crates/event",
    "crates/pow",
    "crates/vote",
    "crates/runtime", "crates/seismology", "crates/city",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_gltf = "0.13.2"
bevy_internal = "0.13.2"
